fix: display calendar on tablet/mobile

--- a/todo-react/src/index.scss
+++ b/todo-react/src/index.scss
@@ -670,9 +670,6 @@ th {
 }
 
 @media screen and (max-width: 1200px) {
-  .calendar_box {
-    display: none;
-  }
   .css-9c211-MuiGrid-root {
     max-width: 100%;
     flex-basis: 100%;
